# email-client-tui-rs

./: .gitignore  Cargo.toml
config/: example.toml
src/: app.rs  cache.rs  command.rs  config.rs  main.rs
src/mail/: client.rs  mod.rs  oauth.rs
